--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   cursor: pointer;
   font-size: 16px;
   margin-left: 10px;
-
+}
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
 
@@ -136,7 +136,7 @@ select {
   padding: 10px;
   font-size: 16px;
   margin-left: 10px;
-  
+} 
 :root {
   --mainColor: #315e6b;
   --mainColorLight: #5767aa;
